[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/fonts/Kenny/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI/fonts/Kenny/Kenney Blocks.ttf" type="DynamicFontData" id=4]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("InteractLabel:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("InteractLabel:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("InteractLabel:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("InteractLabel:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SmallPopUp:self_modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SmallPopUp:self_modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SmallPopUp:self_modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("SmallPopUp:self_modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "small_text_fade"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("SmallPopUp:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, 0, 0.0888667, 0, -0.0888667, 0, -0.1, 0.0670187, 0.1, -0.0670187 ),
"times": PoolRealArray( 0, 0.1 )
}

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.52125, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0705886, 1.36999, -0.0592031 )

[node name="Camera" type="Camera" parent="Head"]

[node name="Interact" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.113589, -0.11099, 0.0592031 )
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 4

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="InteractLabel" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -108.0
margin_bottom = -73.0
text = "Press E to Interact"
align = 1
valign = 1

[node name="SmallPopUp" type="Label" parent="HUD"]
anchor_right = 1.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )

[node name="BigPopUp" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 132.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
anims/RESET = SubResource( 6 )
anims/small_text_fade = SubResource( 7 )
next/small_text_fade = "RESET"

[node name="Crosshair" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 0.513726 )
custom_fonts/font = SubResource( 8 )
text = "X"
align = 1
valign = 1
